# LlmTuner

./: .gitignore  .replit  AWS_ROLE_SETUP.md  AWS_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_FAILURE_ANALYSIS.md  DEPLOYMENT_FIXES_APPLIED.md  DEPLOYMENT_FIX_SUMMARY.md  DOWNLOAD_INSTRUCTIONS.md  FILE_UPLOAD.md  GITHUB_SETUP.md  GOOGLE_OAUTH_FIX.md  LICENSE  LOCAL_SETUP_GUIDE.md  MODEL_TESTING_GUIDE.md  POST_TRAINING_WORKFLOW.md  PROJECT_STRUCTURE.md  README.md  REQUIREMENTS.md  SAGEMAKER_INTEGRATION.md  SETUP_GUIDE.md  TECHNICAL_DOCUMENTATION.md  UI-displaying-old-page-RCA.md  build.sh  debug_google_oauth.html  deploy-check.py  force_cache_clear.html  gpt2_tuning.py  index.html  main.py  package-lock.json  package.json  process_files.py  pyproject.toml  replit.md  requirements.txt  start-production.py  tailwind.config.js  test_gpt2_dataset.py  test_latest_upload.py  (+1 more)
attached_assets/: gpt_2_tuning_basic_pyfiile_1750885685702.py
client/src/: App.tsx  index.css
client/src/components/: file-upload.tsx  hyperparameters.tsx  model-selection.tsx  model-testing.tsx  performance-metrics.tsx  sagemaker-training-fixed.tsx  sidebar.tsx  (+3 more)
docs/: AWS_QUOTA_LIMITS.md  CHANGELOG.md  DEPLOYMENT_FIXES_SUMMARY.md  MODEL_TESTING_GUIDE.md  POST_TRAINING_WORKFLOW.md  README.md  REAL_SAGEMAKER_TRAINING.md  SAGEMAKER_INTEGRATION.md  SAGEMAKER_TRAINING_FIX.md  SAGEMAKER_TRAINING_GUIDE.md  TECHNICAL_DOCUMENTATION.md
server/: auth.py  finetune.py  index.ts  jumpstart_training.py  main.py  routes.ts  sagemaker_training.py  sagemaker_training.py.backup  storage.ts  tuner.ts
shared/: schema.ts
(+10 files in other folders)
